deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: netriun

  labels:
    name: netriun
    app: netriun-web
