deployments/k8s/cloudflare-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudflared
  namespace: netriun

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudflared

  template:

    metadata:
      labels:
        app: cloudflared

    spec:

      containers:

        - name: cloudflared

          image: cloudflare/cloudflared:latest

          args:
            - tunnel
            - --no-autoupdate
            - run
            - --token
            - $(TUNNEL_TOKEN)

          resources:

            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
