deployments/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: netriun-service
  namespace: netriun

  labels:
    app: netriun-web

spec:

  type: ClusterIP

  selector:
    app: netriun-web

  ports:

    - name: http

      protocol: TCP

      port: 80

      targetPort: 8088
