deployments/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: netriun-nodeport
  namespace: netriun

  labels:
    app: netriun-web

spec:

  type: NodePort

  selector:
    app: netriun-web

  ports:

    - name: http

      protocol: TCP

      port: 80

      targetPort: 8088

      nodePort: 30088
