deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: netriun-ingress
  namespace: netriun

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"

spec:

  ingressClassName: nginx

  rules:

    - host: netriun.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: netriun-service
                port:
                  number: 80
